# SpyBOAT

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  scripting-template.py  scripting_template.py
cluster_scripts/: ana_Movie_template.py  cl_prepare_movie_ij.py  read_tiff_stack.py  run_fiji_script.py  slurm_py_template.sh  wavelet_ana_lib.py
doc/: description.md
galaxy/: OutputReport.html  SpyBOAT.xml  WaveletMovies.xml  cl_wrapper.py  output_report.py  run_tests.sh  spyboat_cli.py  styles.css
galaxy-tool/: OutputReport.html  README.md  SpyBOAT.xml  notes.md  output_report.py  spyboat.xml  spyboat_cli.py
galaxy/test-data/: test_movie.tif
local-scripts/: mask_wmovie_ij.py
local_scripts/: TailTracer2.0.py  TailTracerMedaka.py  TailTracer_ij.py  join_wMovie_ij.py  mask_wmovie_ij.py  prepare_movie_ij.py  run_local.sh  run_local_analysis.sh  run_local_mp.sh  run_local_tests.sh  run_tests.sh
spyboat/: #ptest.py#  .#ptest.py  __init__.py  cl_wrapper.py  datasets.py  io.py  plotting.py  processing.py  ptest.py  read_write_tif.py  transform_movie.py  util.py
spyboat/phase_fields/: Quad-movie.tif  Quad-movie2-crop.tif  README.md  demo.py  framedataclass.py  grad_flux.py  plotting.py  (+3 more)
src/: ana_movie.py  ana_movie_mp.py  ana_movie_sp.py  phase_fields.py  run_local.sh  slurm_bash_template.sh  test_argparse.py  wavelet_ana_lib.py
test_data/: IPChannelTest.tif  amplitude_out.tif  multichan2.tif  multichan3.tif  period_out.tif  phase_out.tif  power_out.tif  two_sines.tif  twosmall_sines.tif  twosmall_sines_multichan.tif
util/: mk_test_movies_ij.py
(+4 files in other folders)
